# cthrobt_stm

./: .cproject  .gitignore  .mxproject  .project  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_NOTES.md  GRIPPER_HARDWARE_SETUP.md  HARDWARE_CONFIRMATION.md  HARDWARE_PROTOCOL_TODO.md  HARDWARE_SETUP.md  README.md  README.zh-CN.md  SIMULATION.md  cthrobt.ioc
Core/Inc/: can.h  can_bus.h  controller_task.h  gripper.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  wrist.h
Core/Src/: can_bus.c  controller_task.c  gripper.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  wrist.c
LWIP/App/: lwip.c
Middlewares/ModularCANLib/Inc/: ModularCANLib.h  ModularCANLib_Def.h  ModularCANLib_DeviceInfo_Def.h  ModularCANLib_DeviceInfo_Lookup.h  ModularCANLib_Pid.h  ModularCANLib_RTOS.h  ModularCANLib_Sys.h
Middlewares/ModularCANLib/Inc/CANBoards/: ModularCANLib_CANBoards.h  ModularCANLib_CANBoards_AirCylinder_Def.h  ModularCANLib_CANBoards_DeviceParam.h  ModularCANLib_CANBoards_Dynamixel_Kondo_Def.h  ModularCANLib_CANBoards_MCMD_Def.h  ModularCANLib_CANBoards_Servo_Def.h  ModularCANLib_CANBoards_System_Def.h
Middlewares/ModularCANLib/Inc/ODrive/: ModularCANLib_ODrive.h  ModularCANLib_ODrive_DeviceParam.h
Middlewares/ModularCANLib/Inc/RobStride/: ModularCANLib_RobStride.h  ModularCANLib_RobStride_Constant.h  ModularCANLib_RobStride_DeviceParam.h
Middlewares/ModularCANLib/Inc/RoboMas/: ModularCANLib_RoboMas.h  ModularCANLib_RoboMas_DeviceParam.h
Middlewares/ModularCANLib/Src/: ModularCANLib.c  ModularCANLib_DeviceInfo_Def.c  ModularCANLib_DeviceInfo_Lookup.c  ModularCANLib_NVIC.c  ModularCANLib_Pid.c  ModularCANLib_RTOS.c  ModularCANLib_Sys.c
Middlewares/ModularCANLib/Src/CANBoards/: ModularCANLib_CANBoards.c  ModularCANLib_CANBoards_Sys.c
Middlewares/ModularCANLib/Src/ODrive/: ModularCANLib_ODrive.c
Middlewares/ModularCANLib/Src/RobStride/: ModularCANLib_RobStride.c
Middlewares/ModularCANLib/Src/RoboMas/: ModularCANLib_RoboMas.c
cmake/: stm32_toolchain.cmake
renode/: bridge.py  cthrobt.resc  nucleo_f767zi.repl
scripts/: build.bat  build.sh  clean.bat  clean.sh  manual_controller.py  run_simulation.bat  run_simulation.sh  setup.bat  setup.sh  test_simulation.py
